# os_credits

./: .default.env  .editorconfig  .gitignore  Dockerfile  Dockerfile.dev  Makefile  PULL_REQUEST_TEMPLATE.md  README.rst  docker-compose.yml  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: autoupdate  build-image.yml  codeql-analysis.yml  devDocker.yml  docker.yml  releaseDocker.yml
src/os_credits/: __init__.py  auth.py  log.py  main.py  notifications.py  settings.py  views.py  worker_helper.py
src/os_credits/credits/: base_models.py  models.py  tasks.py
src/os_credits/db_client/: client.py  model.py  tasks.py
src/os_credits/influx/: client.py  model.py
src/os_credits/perun/: attributes.py  group.py
workflows/: systems_setup.md
