[tool.poetry]
name = "os_credits"
version = "2.0.0"
description = ""
authors = ["gilbus", "ekatchko"]

[tool.poetry.dependencies]
python = "3.10.4"
aiohttp = "3.8.4"
aiohttp-swagger = "1.0.16"
aiohttp_jinja2 = "1.5.1"
aiosmtplib = "2.0.2"
asyncpg = "0.28.0"
SQLAlchemy = "1.4.49"
alembic = "1.11.1"
psycopg2 = "2.9.6"

[tool.poetry.dev-dependencies]
aiohttp-devtools = "1.1"
pre-commit = "3.3.3"
black = {version = "23.7.0",allow-prereleases = true}
sphinx-autodoc-typehints = "1.23.4"
sphinx = "5.3.0"
sphinxcontrib-trio = "1.1.2"
lxml = "4.9.3"
sphinxcontrib-programoutput = "0.17"
docker-compose = "1.29.2"

[tool.poetry.scripts]
os-credits="os_credits.cli:main"

[build-system]
requires = ["poetry>=1.1.4"]
build-backend = "poetry.masonry.api"
