[tool.poetry]
name = "os_credits"
version = "2.0.0"
description = ""
authors = ["gilbus", "ekatchko"]

[tool.poetry.dependencies]
python = "3.10.4"
aiohttp = "3.8.5"
aiohttp-swagger = "1.0.16"
aiohttp_jinja2 = "1.5.1"
aiosmtplib = "2.0.2"
asyncpg = "0.28.0"
SQLAlchemy = "1.4.49"
alembic = "1.11.3"
psycopg2 = "2.9.9"

[tool.poetry.dev-dependencies]
aiohttp-devtools = "1.1"
pre-commit = "3.4.0"
black = {version = "23.9.1",allow-prereleases = true}
sphinx-autodoc-typehints = "1.24.0"
sphinx = "7.2.6"
sphinxcontrib-trio = "1.1.2"
lxml = "4.9.3"
sphinxcontrib-programoutput = "0.17"
docker-compose = "1.29.2"

[tool.poetry.scripts]
os-credits="os_credits.cli:main"

[build-system]
requires = ["poetry>=1.1.4"]
build-backend = "poetry.masonry.api"
