[tool.poetry]
name = "os_credits"
version = "2.3.0"
description = ""
authors = ["gilbus", "ekatchko"]

[tool.poetry.dependencies]
python = "3.10.4"
aiohttp = "3.10.11"
aiohttp-swagger = "1.0.16"
aiohttp_jinja2 = "1.5.1"
aiosmtplib = "2.0.2"
asyncpg = "0.29.0"
SQLAlchemy = "1.4.51"
alembic = "1.12.1"
psycopg2 = "2.9.9"

[tool.poetry.dev-dependencies]
aiohttp-devtools = "1.1.2"
pre-commit = "3.6.0"
black = {version = "24.3.0",allow-prereleases = true}
sphinx-autodoc-typehints = "1.25.2"
sphinx = "7.2.6"
sphinxcontrib-trio = "1.1.2"
lxml = "4.9.4"
sphinxcontrib-programoutput = "0.17"
docker-compose = "1.29.2"

[tool.poetry.scripts]
os-credits="os_credits.cli:main"

[build-system]
requires = ["poetry>=1.1.4"]
build-backend = "poetry.masonry.api"
